Creo que he acabado de repasar toda la memoria y el alto nivel, faltan dibujitos y volverlo a escribir

--- a/alto/alto.tex
+++ b/alto/alto.tex
@@ -79,6 +79,7 @@
 \include{cap-traceo}
 \include{cap-estadisticas}
 \include{cap-integracion}
+\include{cap-estandarizacion}
 \include{cap-entorno-de-pruebas}
 
 \pagenumbering{Roman}
