--- a/alto/cap-entorno-de-pruebas.tex
+++ b/alto/cap-entorno-de-pruebas.tex
@@ -59,7 +59,7 @@ Para llevar a cabo las pruebas de rendimiento en el sensor, se han creado dos de
 \item Traceador
 \end{enumerate}
 
-A continuación se explicarán las funciones y características de cada uno indicando las consideraciones a tener en cuenta.
+A continuación se explicarán las funciones y características de cada uno indicando las consideraciones a tener en cuenta, para una mayor descripción, referirse al documento de diseño de bajo nivel.
 
 \subsection{Recolector de estadísticas}
 El gestor debe poder recolectar las estadísticas de este módulo y resetearlas cuando comience una nueva prueba. Con este fin, se ha diseñado un demonio que permite controlar y recolectar de forma remota las estadísticas del módulo.
