--- a/memoria/cap-beneficios.tex
+++ b/memoria/cap-beneficios.tex
@@ -23,10 +23,9 @@ Ksensor ha sido diseñado de forma que pueda realizar cualquier tipo de análisis 
 El diseño de la lógica de nodos es genérico y multidisciplinar, por lo que permite efectuar cualquier tipo de tratamiento sobre el tráfico capturado. Así pues, el sensor es válido en diferentes ámbitos de la telemática como la detección de intrusión, la monitorización inteligente de red o la medida de parámetros de calidad de servicio.
 
 \subsection{Arquitectura de pruebas}
-Con el fin de poder realizar pruebas de rendimiento en el sensor de forma automatizada, en este proyecto se ha desarrollado una arquitectura de pruebas, basada en la plataforma genérica diseñada en \cite{AABS05}. Esta arquitectura permite comprobar el comportamiento tanto de Adviser como de Ksensor cuando se los somete a un patrón de tráfico determinado. Para ello se utilizan plantillas de pruebas o tests, que el sistema ejecuta de forma automatizada y sucesiva, configurando la sonda y los inyectores según se especifique en la plantilla.
+Con el fin de poder realizar pruebas de rendimiento en el sensor de forma automatizada, en este proyecto se ha ampliado la arquitectura de pruebas desarrollada en \cite{KABO05}. Esta arquitectura permite comprobar el comportamiento de Ksensor cuando se le somete a un patrón de tráfico determinado. Para ello se utilizan plantillas de pruebas o tests, que el sistema ejecuta de forma automatizada y sucesiva, configurando la sonda y los inyectores según se especifique en la plantilla.
 
-En la arquitectura actual, se dispone de inyectores hardware, llamados DAG, que son capaces de inyectar a una tasa capaz de saturar el enlace, permitiendo probar el sistema bajo condiciones de estrés, que se dan en redes de alta velocidad. Asimismo, la arquitectura recoge diversas estadísticas de las pruebas realizadas, de cada uno de los componentes que participan en las mismas: switch, interfaces de red, inyectores, sonda, etc.
-
+En la arquitectura actual, se dispone de inyectores hardware, llamados DAG\cite{DAPR10}, que son capaces de inyectar a una tasa capaz de saturar el enlace, permitiendo probar el sistema bajo condiciones de estrés, que se dan en redes de alta velocidad. Asimismo, la arquitectura recoge diversas estadísticas de las pruebas realizadas, de cada uno de los componentes que participan en las mismas: switch, interfaces de red, inyectores, sonda, etc.
 
 \section{Beneficios económicos}
 La utilización del sistema diseñado como herramienta de análisis de tráfico introduce un conjunto de beneficios económicos en relación con las aportaciones técnicas que se han expuesto anteriormente.
