--- a/memoria/memoria.tex
+++ b/memoria/memoria.tex
@@ -16,14 +16,14 @@
 \bibliographystyle{alpha}       % Estilo de bibliografía
 \usepackage{graphicx}           % Para insertar imágenes
 \graphicspath{{../images/}}     % La ruta relativa de las imágenes
+\usepackage[table,usenames,dvipsnames]{xcolor}      % Dar colores a las cosas
 \usepackage{hyperref}           % Hacer links guays entre secciones y hacia fuera
 \usepackage[hypcap]{caption}    % Hacer que las referencias se vean, y no se queden por encima (referenciando imagenes, etc.)
 \hypersetup{
 	colorlinks=true,			% Los links deben estar coloreados
-	linkcolor=blue,				% los links esternos deben ser azules
-	citecolor=red,				% y los de las citas rojos
+	linkcolor=BlueViolet,		% los links externos deben ser Azul marino
+	citecolor=Brown,			% y los de las citas Marrones
 }
-\usepackage[table]{xcolor}      % Dar colores a las tablas
 \usepackage{etoolbox}			% Para el espaciado
 \usepackage[doublespacing]{setspace}
 \usepackage{listings}			% Para formatear código
