--- a/alto/cap-integracion.tex
+++ b/alto/cap-integracion.tex
@@ -1,32 +1,26 @@
 \chapter{Diseño de la integración}
 
-Este es un capítulo que tiene como objetivo explicar con un diseño muy superficial un trabajo que se ha desarrollado más en el diseño de bajo nivel, que no entra dentro del diseño de código, sino más bien en la línea de integración con los estándares oficiales que pretende seguir este proyecto.
+Este es un capítulo que tiene como objetivo explicar como se integran entre si las herramientas del proyecto, Ksensor con las modificaciones expuestas y los módulos de trazas y estadísticas. Para guiar la explicación, se puede referir a  \reference{fig:integracion-modular}{Figura de integración de los módulos}
 
-\section{Integración con estándares}
+\begin{figure}[h]
+\centering
+\includegraphics[width=\linewidth]{Integracion}
+\caption{Integración de los módulos entre si}
+\label{fig:integracion-modular}
+\end{figure}
 
-En esta sección se describirán los diferentes estándares \textit{de-facto} con los que se quiere integrar todo el código de Ksensor y el asociado a este.
+En la figura, se han referenciado las 3 partes que componen el kernel, y donde se introduce o modifica código. Apoyando la explicación en la figura, se explicará la integración entre ksensor y los módulos.
 
-\subsection{Estándares de directorio}
+\section{Ksensor y el módulo de estadísticas}
 
-Se pretende integrar Ksensor dentro de la estructura de directorios de una forma completa. Al igual que muchos otros drivers, o partes del kernel, esto se ha hecho creando una carpeta en el directorio que más razón de pertenecer tenía. La idea principal detrás de este directorio es introducir en esa parte todo lo desarrollado en el grupo de investigación NQaS para su posible liberación.
+En la figura se ha representado el módulo de estadísticas como un módulo compuesto de dos partes, una propiamente dicha, el módulo, la parte que se puede insertar y extraer, y la parte que está estáticamente integrada en el kernel.
 
-\subsection{Estándar de código}
+Dependiendo de las opciones de compilación, en caso de habilitar Ksensor y el módulo de estadísticas simultáneamente, se activan directamente las estadísticas dentro de Ksensor, a parte de las estadísticas internas del mismo. En caso de no habilitar Ksensor, el módulo de estadísticas se compilaría con solo una parte de las mismas.
 
-Tanto como es importante la integración de los ficheros que se han desarrollado en NQaS, es importante acotar las modificaciones como está hecho en el resto del kernel. Se han acotados todas las inserciones por categorías o secciones, que permiten compilar ciertas funcionalidades, y otras no.
+\section{Ksensor y el módulo de trazas}
 
-Todo esto debe ser asimismo configurable para facilitar el uso de las aplicaciones, por ello, se ha integrado todo en una categoría que permite su total desactivación, NQAS dentro de la sección de red, y dentro se han dividido las aplicación Ksensor de los módulos auxiliares para validarlo, y dentro de la aplicación Ksensor se pueden elegir opciones de depuración y estadísticas.
+Este módulo ha sido diseñado para tener un funcionamiento al margen de Ksensor, y de hecho en la implementación actual, tracea softirqs, por lo que no se perdería funcionalidad en este. En caso de implementar trazas dentro de Ksensor, se dejarían de compilar, pero este módulo quedaría disponible para el resto del sistema.
 
-Es muy importante que el diseño en esta parte concuerde con el código y con la lógica de la aplicación, ya que dejar algún trozo suelto podría ser fatal y haría que fallara la compilación. En el plan de pruebas se especificará como comprobar que el diseño de esta integración con el estándar de código ha sido correctamente implementado.
+\section{Estadísticas y trazas}
 
-
-\section{Integración en el repositorio}
-
-Uno de los problemas a los que se enfrentaba Ksensor en caso de liberación era que no utilizaba los métodos de desarrollo de kernel, ahora que se ha integrado en el árbol de kernel como cualquier otro componente, se tiene que integrar de una manera constantemente actualizada esta versión en el repositorio.
-
-En caso de liberar el código, se ha creado una rama de desarrollo paralela a la master de kernel, partiendo de la versión 3.6, que está lista para su uso con un sistema de Integración Continua (CI). A continuación se relatarán los cambios para llevar a cabo tal integración
-
-\subsection{Integración de Ksensor en el repositorio}
-
-Ksensor, tal y como se creó en su momento, está compuesto de unas modificaciones en el kernel, que son las que se han estado mencionando hasta ahora principalmente, un módulo de kernel, que entre otros tiene un driver, una librería de memoria compartida para kernel, libkshmm, y el parser, una aplicación que se encarga de convertir el xml de configuración a su representación en la zona de memoria compartida, y después sacar los datos de ella.
-
-En definitiva, el sistema Ksensor cuenta con muchas partes que deben ser integradas, cada una de ellas debe ir en una parte del kernel para permitir una integración con el código normal.
+Entre estos dos módulos, al requerir en algunas partes de código efectuar las mismas medidas, solo interactúan a nivel de implementación. En el diseño de bajo nivel se darán explicará de una forma más concreta el tipo de interacción que tienen.
