Ahora estoy con el pliego de condiciones

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -94,3 +94,17 @@
 	year = {2012},
 	type = {Proyecto Fin de Carrera},
 }
+
+@Misc{CBSN13,
+	author = {Creative Commons},
+	title = {Attribution-NonCommercial-ShareAlike 3.0 Unported},
+	howpublished = {Página web},
+	note = {http://creativecommons.org/licenses/by-nc-sa/3.0/},
+}
+
+@Misc{GPLV3,
+	author = {GNU},
+	title = {General Public License Version 3},
+	howpublished = {Página web},
+	note ={http://www.gnu.org/licenses/gpl-3.0.html},
+}
